# ODETransformer

./: .gitignore  .pydocstyle  README.md  pyproject.toml  pytest.ini
odetransformer/: main.py  main_combined.py  main_physics.py
odetransformer/architecture/: vehicle_motion_transformer.py
odetransformer/dataset/: generator.py
odetransformer/utilities/: utilities.py
odetransformer/utils/: arguments.py  plots.py  scripts.py  utilities.py
